; ModuleID = '/home/carl/AnghaBench/libevent/extr_event.c_event_config_set_flag.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_event.c_event_config_set_flag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_config = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @event_config_set_flag(%struct.event_config* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.event_config*, align 8
  %5 = alloca i32, align 4
  store %struct.event_config* %0, %struct.event_config** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.event_config*, %struct.event_config** %4, align 8
  %7 = icmp ne %struct.event_config* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %15

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.event_config*, %struct.event_config** %4, align 8
  %12 = getelementptr inbounds %struct.event_config, %struct.event_config* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %10
  store i32 %14, i32* %12, align 4
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %9, %8
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
